// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildAst snapshots > full RootNode 1`] = `
{
  "kind": "Root",
  "operations": [
    {
      "deprecated": undefined,
      "description": undefined,
      "kind": "Operation",
      "method": "GET",
      "operationId": "listPets",
      "parameters": [
        {
          "deprecated": undefined,
          "description": undefined,
          "in": "query",
          "kind": "Parameter",
          "name": "limit",
          "required": false,
          "schema": {
            "default": undefined,
            "deprecated": undefined,
            "description": undefined,
            "example": undefined,
            "kind": "Schema",
            "maximum": 100,
            "minimum": 1,
            "name": undefined,
            "nullable": undefined,
            "type": "integer",
          },
        },
      ],
      "path": "/pets",
      "requestBody": undefined,
      "responses": [
        {
          "description": "A list of pets",
          "kind": "Response",
          "mediaType": "application/json",
          "schema": {
            "kind": "Schema",
            "name": undefined,
            "ref": "PetList",
            "type": "ref",
          },
          "statusCode": "200",
        },
        {
          "description": "Bad request",
          "kind": "Response",
          "mediaType": "application/json",
          "schema": {
            "kind": "Schema",
            "name": undefined,
            "ref": "Error",
            "type": "ref",
          },
          "statusCode": "400",
        },
      ],
      "summary": "List all pets",
      "tags": [
        "pets",
      ],
    },
    {
      "deprecated": true,
      "description": undefined,
      "kind": "Operation",
      "method": "POST",
      "operationId": "createPet",
      "parameters": [],
      "path": "/pets",
      "requestBody": {
        "kind": "Schema",
        "name": undefined,
        "ref": "NewPet",
        "type": "ref",
      },
      "responses": [
        {
          "description": "Pet created",
          "kind": "Response",
          "mediaType": "application/json",
          "schema": {
            "kind": "Schema",
            "name": undefined,
            "ref": "Pet",
            "type": "ref",
          },
          "statusCode": "201",
        },
      ],
      "summary": undefined,
      "tags": [
        "pets",
      ],
    },
    {
      "deprecated": undefined,
      "description": undefined,
      "kind": "Operation",
      "method": "GET",
      "operationId": "getPetById",
      "parameters": [
        {
          "deprecated": undefined,
          "description": undefined,
          "in": "path",
          "kind": "Parameter",
          "name": "petId",
          "required": true,
          "schema": {
            "default": undefined,
            "deprecated": undefined,
            "description": undefined,
            "example": undefined,
            "kind": "Schema",
            "maximum": undefined,
            "minimum": undefined,
            "name": undefined,
            "nullable": undefined,
            "type": "integer",
          },
        },
      ],
      "path": "/pets/{petId}",
      "requestBody": undefined,
      "responses": [
        {
          "description": "A single pet",
          "kind": "Response",
          "mediaType": "application/json",
          "schema": {
            "kind": "Schema",
            "name": undefined,
            "ref": "Pet",
            "type": "ref",
          },
          "statusCode": "200",
        },
        {
          "description": "Not found",
          "kind": "Response",
          "mediaType": undefined,
          "schema": undefined,
          "statusCode": "404",
        },
      ],
      "summary": undefined,
      "tags": [
        "pets",
      ],
    },
  ],
  "schemas": [
    {
      "default": undefined,
      "deprecated": undefined,
      "description": undefined,
      "example": undefined,
      "kind": "Schema",
      "name": "Pet",
      "nullable": undefined,
      "properties": [
        {
          "deprecated": undefined,
          "description": undefined,
          "kind": "Property",
          "name": "id",
          "readOnly": true,
          "required": true,
          "schema": {
            "default": undefined,
            "deprecated": undefined,
            "description": undefined,
            "example": undefined,
            "kind": "Schema",
            "maximum": undefined,
            "minimum": undefined,
            "name": undefined,
            "nullable": undefined,
            "type": "integer",
          },
          "writeOnly": undefined,
        },
        {
          "deprecated": undefined,
          "description": undefined,
          "kind": "Property",
          "name": "name",
          "readOnly": undefined,
          "required": true,
          "schema": {
            "default": undefined,
            "deprecated": undefined,
            "description": undefined,
            "example": undefined,
            "kind": "Schema",
            "maxLength": undefined,
            "minLength": undefined,
            "name": undefined,
            "nullable": undefined,
            "pattern": undefined,
            "readOnly": undefined,
            "type": "string",
            "writeOnly": undefined,
          },
          "writeOnly": undefined,
        },
        {
          "deprecated": undefined,
          "description": undefined,
          "kind": "Property",
          "name": "tag",
          "readOnly": undefined,
          "required": false,
          "schema": {
            "default": undefined,
            "deprecated": undefined,
            "description": undefined,
            "example": undefined,
            "kind": "Schema",
            "maxLength": undefined,
            "minLength": undefined,
            "name": undefined,
            "nullable": true,
            "pattern": undefined,
            "readOnly": undefined,
            "type": "string",
            "writeOnly": undefined,
          },
          "writeOnly": undefined,
        },
      ],
      "readOnly": undefined,
      "type": "object",
      "writeOnly": undefined,
    },
    {
      "default": undefined,
      "deprecated": undefined,
      "description": undefined,
      "example": undefined,
      "kind": "Schema",
      "name": "NewPet",
      "nullable": undefined,
      "properties": [
        {
          "deprecated": undefined,
          "description": undefined,
          "kind": "Property",
          "name": "name",
          "readOnly": undefined,
          "required": true,
          "schema": {
            "default": undefined,
            "deprecated": undefined,
            "description": undefined,
            "example": undefined,
            "kind": "Schema",
            "maxLength": undefined,
            "minLength": undefined,
            "name": undefined,
            "nullable": undefined,
            "pattern": undefined,
            "readOnly": undefined,
            "type": "string",
            "writeOnly": undefined,
          },
          "writeOnly": undefined,
        },
        {
          "deprecated": undefined,
          "description": undefined,
          "kind": "Property",
          "name": "tag",
          "readOnly": undefined,
          "required": false,
          "schema": {
            "default": undefined,
            "deprecated": undefined,
            "description": undefined,
            "example": undefined,
            "kind": "Schema",
            "maxLength": undefined,
            "minLength": undefined,
            "name": undefined,
            "nullable": undefined,
            "pattern": undefined,
            "readOnly": undefined,
            "type": "string",
            "writeOnly": undefined,
          },
          "writeOnly": undefined,
        },
      ],
      "readOnly": undefined,
      "type": "object",
      "writeOnly": undefined,
    },
    {
      "default": undefined,
      "deprecated": undefined,
      "description": undefined,
      "example": undefined,
      "items": [
        {
          "kind": "Schema",
          "name": undefined,
          "ref": "Pet",
          "type": "ref",
        },
      ],
      "kind": "Schema",
      "maxLength": undefined,
      "minLength": undefined,
      "name": "PetList",
      "nullable": undefined,
      "type": "array",
    },
    {
      "default": undefined,
      "deprecated": undefined,
      "description": undefined,
      "example": undefined,
      "kind": "Schema",
      "name": "Error",
      "nullable": undefined,
      "properties": [
        {
          "deprecated": undefined,
          "description": undefined,
          "kind": "Property",
          "name": "code",
          "readOnly": undefined,
          "required": true,
          "schema": {
            "default": undefined,
            "deprecated": undefined,
            "description": undefined,
            "example": undefined,
            "kind": "Schema",
            "maximum": undefined,
            "minimum": undefined,
            "name": undefined,
            "nullable": undefined,
            "type": "integer",
          },
          "writeOnly": undefined,
        },
        {
          "deprecated": undefined,
          "description": undefined,
          "kind": "Property",
          "name": "message",
          "readOnly": undefined,
          "required": true,
          "schema": {
            "default": undefined,
            "deprecated": undefined,
            "description": undefined,
            "example": undefined,
            "kind": "Schema",
            "maxLength": undefined,
            "minLength": undefined,
            "name": undefined,
            "nullable": undefined,
            "pattern": undefined,
            "readOnly": undefined,
            "type": "string",
            "writeOnly": undefined,
          },
          "writeOnly": undefined,
        },
      ],
      "readOnly": undefined,
      "type": "object",
      "writeOnly": undefined,
    },
    {
      "deprecated": undefined,
      "description": undefined,
      "enumValues": [
        "active",
        "inactive",
        "pending",
      ],
      "kind": "Schema",
      "name": "Status",
      "nullable": undefined,
      "type": "enum",
    },
    {
      "deprecated": undefined,
      "description": undefined,
      "kind": "Schema",
      "members": [
        {
          "kind": "Schema",
          "name": undefined,
          "ref": "Pet",
          "type": "ref",
        },
        {
          "kind": "Schema",
          "name": undefined,
          "ref": "Error",
          "type": "ref",
        },
      ],
      "name": "PetOrError",
      "nullable": undefined,
      "properties": undefined,
      "type": "union",
    },
    {
      "deprecated": undefined,
      "description": undefined,
      "kind": "Schema",
      "members": [
        {
          "kind": "Schema",
          "name": undefined,
          "ref": "Pet",
          "type": "ref",
        },
        {
          "default": undefined,
          "deprecated": undefined,
          "description": undefined,
          "example": undefined,
          "kind": "Schema",
          "name": undefined,
          "nullable": undefined,
          "properties": [
            {
              "deprecated": undefined,
              "description": undefined,
              "kind": "Property",
              "name": "createdAt",
              "readOnly": undefined,
              "required": false,
              "schema": {
                "default": undefined,
                "deprecated": undefined,
                "description": undefined,
                "example": undefined,
                "kind": "Schema",
                "name": undefined,
                "nullable": undefined,
                "readOnly": undefined,
                "type": "datetime",
                "writeOnly": undefined,
              },
              "writeOnly": undefined,
            },
            {
              "deprecated": undefined,
              "description": undefined,
              "kind": "Property",
              "name": "email",
              "readOnly": undefined,
              "required": false,
              "schema": {
                "default": undefined,
                "deprecated": undefined,
                "description": undefined,
                "example": undefined,
                "kind": "Schema",
                "name": undefined,
                "nullable": undefined,
                "readOnly": undefined,
                "type": "email",
                "writeOnly": undefined,
              },
              "writeOnly": undefined,
            },
          ],
          "readOnly": undefined,
          "type": "object",
          "writeOnly": undefined,
        },
      ],
      "name": "FullPet",
      "nullable": undefined,
      "properties": undefined,
      "type": "intersection",
    },
  ],
}
`;

exports[`buildAst snapshots > operation 'createPet' 1`] = `
{
  "deprecated": true,
  "description": undefined,
  "kind": "Operation",
  "method": "POST",
  "operationId": "createPet",
  "parameters": [],
  "path": "/pets",
  "requestBody": {
    "kind": "Schema",
    "name": undefined,
    "ref": "NewPet",
    "type": "ref",
  },
  "responses": [
    {
      "description": "Pet created",
      "kind": "Response",
      "mediaType": "application/json",
      "schema": {
        "kind": "Schema",
        "name": undefined,
        "ref": "Pet",
        "type": "ref",
      },
      "statusCode": "201",
    },
  ],
  "summary": undefined,
  "tags": [
    "pets",
  ],
}
`;

exports[`buildAst snapshots > operation 'getPetById' 1`] = `
{
  "deprecated": undefined,
  "description": undefined,
  "kind": "Operation",
  "method": "GET",
  "operationId": "getPetById",
  "parameters": [
    {
      "deprecated": undefined,
      "description": undefined,
      "in": "path",
      "kind": "Parameter",
      "name": "petId",
      "required": true,
      "schema": {
        "default": undefined,
        "deprecated": undefined,
        "description": undefined,
        "example": undefined,
        "kind": "Schema",
        "maximum": undefined,
        "minimum": undefined,
        "name": undefined,
        "nullable": undefined,
        "type": "integer",
      },
    },
  ],
  "path": "/pets/{petId}",
  "requestBody": undefined,
  "responses": [
    {
      "description": "A single pet",
      "kind": "Response",
      "mediaType": "application/json",
      "schema": {
        "kind": "Schema",
        "name": undefined,
        "ref": "Pet",
        "type": "ref",
      },
      "statusCode": "200",
    },
    {
      "description": "Not found",
      "kind": "Response",
      "mediaType": undefined,
      "schema": undefined,
      "statusCode": "404",
    },
  ],
  "summary": undefined,
  "tags": [
    "pets",
  ],
}
`;

exports[`buildAst snapshots > operation 'listPets' 1`] = `
{
  "deprecated": undefined,
  "description": undefined,
  "kind": "Operation",
  "method": "GET",
  "operationId": "listPets",
  "parameters": [
    {
      "deprecated": undefined,
      "description": undefined,
      "in": "query",
      "kind": "Parameter",
      "name": "limit",
      "required": false,
      "schema": {
        "default": undefined,
        "deprecated": undefined,
        "description": undefined,
        "example": undefined,
        "kind": "Schema",
        "maximum": 100,
        "minimum": 1,
        "name": undefined,
        "nullable": undefined,
        "type": "integer",
      },
    },
  ],
  "path": "/pets",
  "requestBody": undefined,
  "responses": [
    {
      "description": "A list of pets",
      "kind": "Response",
      "mediaType": "application/json",
      "schema": {
        "kind": "Schema",
        "name": undefined,
        "ref": "PetList",
        "type": "ref",
      },
      "statusCode": "200",
    },
    {
      "description": "Bad request",
      "kind": "Response",
      "mediaType": "application/json",
      "schema": {
        "kind": "Schema",
        "name": undefined,
        "ref": "Error",
        "type": "ref",
      },
      "statusCode": "400",
    },
  ],
  "summary": "List all pets",
  "tags": [
    "pets",
  ],
}
`;

exports[`buildAst snapshots > schema 'FullPet' ('allOf / intersection with format fiel…') 1`] = `
{
  "deprecated": undefined,
  "description": undefined,
  "kind": "Schema",
  "members": [
    {
      "kind": "Schema",
      "name": undefined,
      "ref": "Pet",
      "type": "ref",
    },
    {
      "default": undefined,
      "deprecated": undefined,
      "description": undefined,
      "example": undefined,
      "kind": "Schema",
      "name": undefined,
      "nullable": undefined,
      "properties": [
        {
          "deprecated": undefined,
          "description": undefined,
          "kind": "Property",
          "name": "createdAt",
          "readOnly": undefined,
          "required": false,
          "schema": {
            "default": undefined,
            "deprecated": undefined,
            "description": undefined,
            "example": undefined,
            "kind": "Schema",
            "name": undefined,
            "nullable": undefined,
            "readOnly": undefined,
            "type": "datetime",
            "writeOnly": undefined,
          },
          "writeOnly": undefined,
        },
        {
          "deprecated": undefined,
          "description": undefined,
          "kind": "Property",
          "name": "email",
          "readOnly": undefined,
          "required": false,
          "schema": {
            "default": undefined,
            "deprecated": undefined,
            "description": undefined,
            "example": undefined,
            "kind": "Schema",
            "name": undefined,
            "nullable": undefined,
            "readOnly": undefined,
            "type": "email",
            "writeOnly": undefined,
          },
          "writeOnly": undefined,
        },
      ],
      "readOnly": undefined,
      "type": "object",
      "writeOnly": undefined,
    },
  ],
  "name": "FullPet",
  "nullable": undefined,
  "properties": undefined,
  "type": "intersection",
}
`;

exports[`buildAst snapshots > schema 'Pet' ('object with required props') 1`] = `
{
  "default": undefined,
  "deprecated": undefined,
  "description": undefined,
  "example": undefined,
  "kind": "Schema",
  "name": "Pet",
  "nullable": undefined,
  "properties": [
    {
      "deprecated": undefined,
      "description": undefined,
      "kind": "Property",
      "name": "id",
      "readOnly": true,
      "required": true,
      "schema": {
        "default": undefined,
        "deprecated": undefined,
        "description": undefined,
        "example": undefined,
        "kind": "Schema",
        "maximum": undefined,
        "minimum": undefined,
        "name": undefined,
        "nullable": undefined,
        "type": "integer",
      },
      "writeOnly": undefined,
    },
    {
      "deprecated": undefined,
      "description": undefined,
      "kind": "Property",
      "name": "name",
      "readOnly": undefined,
      "required": true,
      "schema": {
        "default": undefined,
        "deprecated": undefined,
        "description": undefined,
        "example": undefined,
        "kind": "Schema",
        "maxLength": undefined,
        "minLength": undefined,
        "name": undefined,
        "nullable": undefined,
        "pattern": undefined,
        "readOnly": undefined,
        "type": "string",
        "writeOnly": undefined,
      },
      "writeOnly": undefined,
    },
    {
      "deprecated": undefined,
      "description": undefined,
      "kind": "Property",
      "name": "tag",
      "readOnly": undefined,
      "required": false,
      "schema": {
        "default": undefined,
        "deprecated": undefined,
        "description": undefined,
        "example": undefined,
        "kind": "Schema",
        "maxLength": undefined,
        "minLength": undefined,
        "name": undefined,
        "nullable": true,
        "pattern": undefined,
        "readOnly": undefined,
        "type": "string",
        "writeOnly": undefined,
      },
      "writeOnly": undefined,
    },
  ],
  "readOnly": undefined,
  "type": "object",
  "writeOnly": undefined,
}
`;

exports[`buildAst snapshots > schema 'PetList' ('array of refs') 1`] = `
{
  "default": undefined,
  "deprecated": undefined,
  "description": undefined,
  "example": undefined,
  "items": [
    {
      "kind": "Schema",
      "name": undefined,
      "ref": "Pet",
      "type": "ref",
    },
  ],
  "kind": "Schema",
  "maxLength": undefined,
  "minLength": undefined,
  "name": "PetList",
  "nullable": undefined,
  "type": "array",
}
`;

exports[`buildAst snapshots > schema 'PetOrError' ('oneOf / union') 1`] = `
{
  "deprecated": undefined,
  "description": undefined,
  "kind": "Schema",
  "members": [
    {
      "kind": "Schema",
      "name": undefined,
      "ref": "Pet",
      "type": "ref",
    },
    {
      "kind": "Schema",
      "name": undefined,
      "ref": "Error",
      "type": "ref",
    },
  ],
  "name": "PetOrError",
  "nullable": undefined,
  "properties": undefined,
  "type": "union",
}
`;

exports[`buildAst snapshots > schema 'Status' ('enum') 1`] = `
{
  "deprecated": undefined,
  "description": undefined,
  "enumValues": [
    "active",
    "inactive",
    "pending",
  ],
  "kind": "Schema",
  "name": "Status",
  "nullable": undefined,
  "type": "enum",
}
`;
